--- a/sayhello/.cs50.yaml
+++ b/sayhello/.cs50.yaml
@@ -1,9 +1,6 @@
-submit50:
-  files: &submit50_files
-    - !exclude "*"
-    - !include "*.py"
-    - !require sayhello.py
-  style: false
-
 check50:
-  files: *submit50_files
+  checks:
+    hello world:
+      -run python3 hello.py
+      stdout: Hello, world!
+      exit:0
