--- a/hello/.cs50.yaml
+++ b/hello/.cs50.yaml
@@ -1,6 +1,9 @@
+submit50:
+  files: &submit50_files
+    - !exclude "*"
+    - !include "*.py"
+    - !require hello.py
+  style: false
+
 check50:
-  checks:
-    hello world:
-      -run python3 hello.py
-      stdout: Hello, world!
-      exit:0
+  files: *submit50_files
